@@ -581,6 +581,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #5984: distutils.command.build_ext.check_extensions_list checks were broken
+  for old-style extensions.
+
 - Issue #5976: Fixed Distutils test_check_environ.
 
 - Issue #5941: Distutils build_clib command was not working anymore because
